--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name = "viewport" content="width=device-width, initial-scale=1.0">
         <title>Foodmate - Best Food Website!</title>
     </head>
-    <body></body>
+    <body>
+        <h1>FoodMate - 50% Off!</h1>
+
+    </body>
     </body>
 </html>
