Fixed Typo in Buy Now

--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
         <title>Foodmate - Best Food Website!</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <h1>FoodMate - But Now</h1>
-=======
-        <h1>FoodMate - 50% Off!</h1>
->>>>>>> heading
+        <h1>FoodMate - Buy Now</h1>
 
     </body>
     </body>
