--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>FoodMate - Buy Now</h1>
-
+        <p>Best food website!</p>
     </body>
     </body>
 </html>
