--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>FoodMate - Buy Now</h1>
         <p>Best food website!</p>
-        <footer>Designed by Team</footer>
+        <footer>Designed by UL Team</footer>
     </body>
     </body>
 </html>
