--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <h1>FoodMate - Buy Now</h1>
         <p>Best food website!</p>
+        <p>New para</p>
         <footer>Designed by UL Team</footer>
     </body>
     </body>
