--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>FoodMate - Buy Now</h1>
         <p>Best food website!</p>
         <p>New para</p>
+        <p>New main commit</p>
         <footer>Designed by UL Team</footer>
     </body>
     </body>
