--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
         <meta charset = "UTF-8">
         <meta http-equiv="X-UA-Compatible" content = "IE-edge">
         <meta name = "viewport" content="width=device-width, initial-scale=1.0">
-        <title>Foodmate - Best Food Website!</title>
+        <title>Home Page Updated | Splitmate Online</title>
+        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="">
     </head>
+
     <body>
-        <h1>FoodMate - Buy Now - 50% off</h1>
-        <footer>Designed by UL Team</footer>
+        <h1>Home Page</h1>
+        <p>Lorem, ipsum.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, iste.</p>
     </body>
     </body>
 </html>
